--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,7 @@
 [project]
-name = "asr"
+name = "sensevoice"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "fastapi>=0.121.3",
-    "faster-whisper>=1.2.1",
-    "numpy>=2.3.5",
-    "nvidia-cublas-cu12>=12.9.1.4",
-    "nvidia-cudnn-cu12>=9.16.0.29",
-    "pyaudio>=0.2.14",
-    "python-multipart>=0.0.20",
-    "uvicorn>=0.38.0",
-    "websockets>=15.0.1",
-]
+dependencies = []
