--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,18 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "fastapi>=0.111.1",
+    "funasr>=1.1.3",
+    "gradio>=6.0.1",
+    "huggingface>=0.0.1",
+    "huggingface-hub>=1.1.6",
+    "modelscope>=1.32.0",
+    "numpy<=1.26.4",
+    "torch<=2.3",
+    "torchaudio>=2.3.0",
+    "torchvision>=0.18.0",
+]
 
 # 1. 定义 PyTorch 专用源，并标记为 explicit (显式)，防止污染其他包
 [[tool.uv.index]]
